feat : novas validações
