# app/Http/Controllers/Api/AssinaturaController.php
@@ -13,13 +13,49 @@ class AssinaturaController extends Controller
 {
     /**
      * @OA\Get(
-     *     path="/assinaturas",
-     *     summary="Display a listing of signatures",
-     *     description="Retrieves a list of all signatures",
-     *     tags={"Signatures"},
+     *     path="/assinatura",
+     *     summary="Buscar assinaturas",
+     *     description="Todas as assinaturas",
+     *     tags={"Assinaturas"},
      *     @OA\Response(
      *         response=200,
-     *         description="Successful operation"
+     *         description="Successful operation",
+     *          content={
+     *              @OA\MediaType(
+     *                  mediaType="application/json",
+     *                  @OA\Schema(
+     *                      @OA\Property(
+     *                          property="data",
+     *                          type="array",
+     *                          description="The response data",
+     *                          items = @OA\Items(
+     *                              @OA\Property(
+     *                          property="data_inicio",
+     *                          type="datetime",
+     *                       ), @OA\Property(
+     *                          property="data_termino",
+     *                          type="datetime",
+     *                       ),@OA\Property(
+     *                          property="status",
+     *                          type="string",
+     *                       ),@OA\Property(
+     *                          property="plano_id",
+     *                          type="integer",
+     *                       ),@OA\Property(
+     *                          property="cliente_id",
+     *                          type="integer",
+     *                       ),
+     *                          )
+     *                      ),
+     *                      example={
+     *                          "errcode": 1,
+     *                          "errmsg": "ok",
+     *                          "data": {}
+     *                      }
+     *                  )
+     *              )
+     *          }
+     *
      *     )
      * )
      */
@@ -28,15 +64,45 @@ class AssinaturaController extends Controller
         return Assinatura::all();
     }
 
+    /**
+     * @OA\Post(
+     *     path="/assinatura",
+     *     summary="Assinatura",
+     *     tags={"Assinaturas"},
+     *     @OA\Parameter(
+     *         name="plano",
+     *         in="header",
+     *         description="id do plano",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="cliente",
+     *         in="header",
+     *         description="Id do cliente",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="vigencia",
+     *         in="header",
+     *         description="Dias de vigência do plano",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response="201", description="Assinatura registrada com sucesso"),
+     *     @OA\Response(response="422", description="Erro na validação")
+     * )
+     */
     public function store(Request $request)
     {
-        $assinaturaRequest = $request->all();
-        $planoId = $assinaturaRequest['plano'];
-        $cliente = $assinaturaRequest['cliente'];
-        $vigencia = $assinaturaRequest['vigencia'];
-        $plano = Plano::find($planoId);
-
-        try {
+//        $assinaturaRequest = $request->all();
+//        $planoId = $assinaturaRequest['plano'];
+//        $cliente = $assinaturaRequest['cliente'];
+//        $vigencia = $assinaturaRequest['vigencia'];
+//        $plano = Plano::find($planoId);
+//
+//        try {
 //            $plano = new Assinatura::create([
 //                'data_inicio' =>new DateTime('now'),
 //                'data_fim' => (new DateTime())->add($vigencia),
@@ -45,15 +111,55 @@ class AssinaturaController extends Controller
 //                'plano' => $plano,
 //
 //            ]);
-            $plano->save();
-
-        }catch (\Exception $e){
-            Log::alert($e->getMessage());
-        }
+//            $plano->save();
+//
+//        }catch (\Exception $e){
+//            Log::alert($e->getMessage());
+//        }
     }
 
     /**
-     * Display the specified resource.
+     * @OA\Get(
+     *     path="/assinatura/{id}",
+     *     summary="Buscar um assinatura especifica",
+     *     tags={"Assinaturas"},
+     *     @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="id da assinatura",
+     *          required=true,
+     *          @OA\Schema(type="integer")
+     *      ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *          content={
+     *              @OA\MediaType(
+     *                  mediaType="application/json",
+     *                  @OA\Schema(
+     *
+     *                        @OA\Property(
+     *                          property="data_inicio",
+     *                          type="datetime",
+     *                       ), @OA\Property(
+     *                          property="data_termino",
+     *                          type="datetime",
+     *                       ),@OA\Property(
+     *                          property="status",
+     *                          type="string",
+     *                       ),@OA\Property(
+     *                          property="plano_id",
+     *                          type="integer",
+     *                       ),@OA\Property(
+     *                          property="cliente_id",
+     *                          type="integer",
+     *                       )
+     * )
+     *              )
+     *          }
+     *
+     *     )
+     * )
      */
     public function show(string $id)
     {
@@ -61,7 +167,34 @@ class AssinaturaController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Patch(
+     *     path="/assinatura/{id}",
+     *     summary="Atualizar Assinatura",
+     *     tags={"Assinaturas"},
+     *     @OA\Parameter(
+     *         name="data_termino",
+     *         in="header",
+     *         description="No data de termino",
+     *         required=true,
+     *         @OA\Schema(type="datetime")
+     *     ),
+     *     @OA\Parameter(
+     *         name="status",
+     *         in="header",
+     *         description="Novo status ",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="id da assinatura",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response="201", description="Assinatura atualizada com sucesso"),
+     *     @OA\Response(response="422", description="Erro na validação")
+     * )
      */
     public function update(Request $request, string $id)
     {
@@ -74,7 +207,20 @@ class AssinaturaController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *     path="/assinatura/{id}",
+     *     summary="Excluir uma assinatura",
+     *     tags={"Assinaturas"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="id da assinatura",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response="201", description="Assinatura exluida com sucesso"),
+     *     @OA\Response(response="422", description="Erro na validação")
+     * )
      */
     public function destroy(string $id)
     {
