# routes/api.php
@@ -1,20 +1,20 @@
 <?php
 
 use App\Http\Controllers\Api\AssinaturaControle;
+use App\Http\Controllers\Api\AssinaturaController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\PlanosController;
-
 Route::get('/planos',[PlanosController::class,'all']);
 Route::post('/planos',[PlanosController::class,'new']);
 Route::delete('/planos/{id}',[PlanosController::class,'delete']);
 Route::patch('/planos/{id}',[PlanosController::class,'edit']);
 
-Route::get('/assinatura',[AssinaturaControle::class,'index']);
-Route::post('/assinatura',[AssinaturaControle::class,'store']);
-Route::patch('/assinatura/{id]',[AssinaturaControle::class,'update']);
-Route::get('/assinatura/{id]',[AssinaturaControle::class,'show']);
-Route::delete('/assinatura/{id]',[AssinaturaControle::class,'destroy']);
+Route::get('/assinatura',[AssinaturaController::class,'index']);
+Route::post('/assinatura',[AssinaturaController::class,'store']);
+Route::patch('/assinatura/{id]',[AssinaturaController::class,'update']);
+Route::get('/assinatura/{id]',[AssinaturaController::class,'show']);
+Route::delete('/assinatura/{id]',[AssinaturaController::class,'destroy']);
 
 Route::get('/',function(){
     return response()->json([
